fixing misalignment

--- a/app/assets/stylesheets/proper/service_details.css.sass
+++ b/app/assets/stylesheets/proper/service_details.css.sass
@@ -50,7 +50,7 @@
   table td
     margin: 10px
   input
-    width: 100%
+    width: 90%
     font-size: 25
     &[type=submit]
       float: right
@@ -67,14 +67,14 @@
     .arm-cell
       width: 170px
       float: left
-      padding: 5px 10px
+      padding: 5px 6px
       text-align: center
       position: relative
       margin-right: 8px
       .screening_info_img
         position: absolute
         top: 7px
-        left: 190px
+        left: 180px
     .arm-cell-right
       float: right !important
     .arm-cell
